aws/NetworkAcls-ap-south-1.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-d287a5bb", 
     "NetworkAclId": "acl-d10d82b8", 
     "SubnetId": "subnet-cec10783"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-d587a5bc", 
     "NetworkAclId": "acl-d10d82b8", 
     "SubnetId": "subnet-eb9f1f82"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-d10d82b8", 
   "Tags": [], 
   "VpcId": "vpc-9ac442f3"
  }
 ]
}
